tests/error/nested_errors/different_types_if.err
Guppy compilation failed. Error in file $FILE:13

11:            return False
12:    
13:    return bar()
              ^^^^^
GuppyTypeError: Expected expression of type `int`, got `bool`
